--- a/suneee-ynt-web/src/main/webapp/index.html
+++ b/suneee-ynt-web/src/main/webapp/index.html
@@ -22,7 +22,7 @@
         obj.uModel2.str2 = "str2"; */
         
         obj.authc={};
-        obj.authc.userName = "liqiaomu";
+        obj.authc.userName1 = "liqiaomu";
         obj.authc.suneeeDigest = "123456";
         
         var obj2 = [{str1:"str1"}, {str1:"str1"}];
